--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -225,7 +225,7 @@
             <div class="name">Payal Meena</div>
             <div class="roll-no">Roll No: IT-2K22-31</div>
             <nav class="nav-links">
-                <a href="assignmentpage.html" target="_blank">Assignments</a>
+                <a href="assignment.html" target="_blank">Assignments</a>
             </nav>
         </div>
     </div>
