--- a/portfolio/assignment.html
+++ b/portfolio/assignment.html
@@ -174,32 +174,32 @@
             <p class="video-description">This video give an overview of naive bayes classification in python discussing various topics.</p>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID2" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/qmN6EYJGrRI?si=a7D0N1XvIyfbQ23B" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <h3 class="video-title">#7: NEURAL NETWORKS</h3>
             <p class="video-description">This video give an overview of neural networks in python discussing various topics.</p>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID2" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/LVRTHWw8qEc?si=BH_PPeRIcmcksz9l" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <h3 class="video-title">#8: CLUSTERING</h3>
             <p class="video-description">This video give an overview of clustering in python discussing various topics.</p>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID2" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/NrvzHJrqFPU?si=Samn_EISB6cPLEkj" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <h3 class="video-title">#9: REGRESSION MODELLING</h3>
             <p class="video-description">This video give an overview of regression modelling in python discussing various topics.</p>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID2" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/GWpNm4wpe6s?si=t0m7Ooxzad7TCiIW" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <h3 class="video-title">#10: DIMENSION REDUCTION </h3>
             <p class="video-description">This video give an overview of dimension reduction  in python discussing various topics.</p>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID2" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/u2N0VQFOi70?si=2EbTSiH2yJSOYhuF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <h3 class="video-title">#11: LOGISTIC REGRESSION MODELLING</h3>
             <p class="video-description">This video give an overview of logistic regression modelling in python discussing various topics.</p>
         </div>
         <div class="video-container">
-            <iframe src="https://www.youtube.com/embed/VIDEO_ID2" allowfullscreen></iframe>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/F-tbnbxh0lA?si=lQmhbpT-1q5pB3t-" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
             <h3 class="video-title">#12: ASSOCIATION RULES</h3>
             <p class="video-description">This video give an overview of association rules in python discussing various topics.</p>
         </div>
