--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -246,12 +246,12 @@
             <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/wBt8t4rfPTE?si=9dyzQFSNG66yX73Y')">Assignment 4</div>
             <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/6ZZVGsS4SkM?si=_obcMl-7tghqC7cN')">Assignment 5</div>
             <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/BtecenFHJ8o?si=FyJZp5o3g-Ipv-Ia')">Assignment 6</div>
-            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/VIDEO_ID7')">Assignment 7</div>
-            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/VIDEO_ID1')">Assignment 8</div>
-            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/VIDEO_ID1')">Assignment 9</div>
-            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/VIDEO_ID1')">Assignment 10</div>
-            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/VIDEO_ID1')">Assignment 11</div>
-            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/VIDEO_ID1')">Assignment 12</div>
+            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/qmN6EYJGrRI?si=KDYKWxwqlr_PwgY5')">Assignment 7</div>
+            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/LVRTHWw8qEc?si=6Gg8syuO5J2LaWOt')">Assignment 8</div>
+            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/NrvzHJrqFPU?si=B9arnJ48LvCq0UfB')">Assignment 9</div>
+            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/GWpNm4wpe6s?si=D-uF8QeAFsfwhW-R')">Assignment 10</div>
+            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/u2N0VQFOi70?si=h2bwyG-7qdAVPRFG')">Assignment 11</div>
+            <div class="tab" onclick="loadVideo('https://www.youtube.com/embed/F-tbnbxh0lA?si=wVpUlaqsff6BgL2T')">Assignment 12</div>
         </div>
         <iframe id="video-frame" src="https://www.youtube.com/embed/VIDEO_ID1" allowfullscreen></iframe>
     </div>
